<resources>
    <string name="chat_channel_id" translatable="false">MyDefaultChannelID</string>
    <string name="my_chat_channel" translatable="false">MyDefaultChannelName</string>
    <string name="notify_channel_description_for_chat" translatable="false">MyDefaultChannelDescription</string>
    <string name="app_name">TaskMet</string>
    <string name="btnText_Phone">Phone</string>
    <string name="welcome_text">welcome to Taskmate</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="a_6_digit_code_is_send_to">A 6-digit code is send to</string>
    <string name="_92_1234567">+92 1234567</string>
    <string name="_sec_left">sec left</string>
    <string name="_1_20">1 : 20</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_continue">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api_key">AIzaSyD82nzdcYj4ZHdzl1Z8GF8QXGq__hIrFoA</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="post_task">Post Task</string>
    <string name="post_ad">Post Ad</string>
    <string name="my_task">My Tasks</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="image">image</string>
    <string name="mobile">Mobile</string>
    <string name="computer">Computer</string>
    <string name="vehicle">Vehicle</string>
    <string name="furniture">Furniture</string>
    <string-array name="appliances">
        <item>@string/tv</item>
        <item>@string/video</item>
        <item>@string/audio</item>
        <item>@string/cameras_accessories</item>
        <item>@string/games</item>
        <item>@string/entertainment</item>
        <item>@string/generators</item>
        <item>@string/ups</item>
        <item>@string/ac_coolers</item>
        <item>@string/kitchen_appliances</item>
        <item>@string/fridges_freezers</item>
        <item>@string/washing_machines_dryers</item>
        <item>@string/other_home_appliances</item>

    </string-array>
    <string-array name="sports">
        <item>@string/football</item>
        <item>@string/cricket</item>
        <item>@string/badminton</item>
        <item>@string/volleyball</item>
        <item>@string/basketball</item>
        <item>@string/tennis</item>
        <item>@string/other_sports</item>

    </string-array>
    <string name="shopping">Shopping</string>
    <string name="see_all">View all categories</string>
    <string name="services">Services</string>
    <string name="jobs">Jobs</string>
    <string name="property">Property</string>
    <string name="travel">Travel</string>
    <string name="education">Education</string>
    <string name="development">Development</string>
    <string name="health">Health</string>
    <string name="searchHint"><![CDATA[Search Mobiles, jobs & much more…]]></string>
    <string name="pets_animals"><![CDATA[Pets & animals]]></string>
    <string name="bike">Bikes</string>
    <string name="fashion">Fashion</string>
    <string-array name="books">
        <item>@string/books_sub</item>
        <item>@string/magazines</item>
        <item>@string/gym_fitness</item>
        <item>@string/other</item>

    </string-array>
    <string-array name="kids">
        <item>@string/toys</item>
        <item>@string/kids_furniture</item>
        <item>@string/prams</item>
        <item>@string/walkers</item>
        <item>@string/kids_bikes</item>
        <item>@string/kids_accessories</item>

    </string-array>
    <string name="electronics_repair">Electronics Repair</string>
    <string name="marriage">Marriage</string>
    <string name="car_rental">Car rental</string>
    <string name="events">Events</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="catering">Catering</string>
    <string name="electronics">Electronics</string>
    <string name="house_office_renovation"><![CDATA[House & Office Renovation]]></string>
    <string name="what_are_you_offer">What are you offer?</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="tablets">Tablets</string>
    <string name="mobile_accessories">Accessories</string>
    <string-array name="mobiles">
        <item>@string/mobile_phone</item>
        <item>@string/tablets</item>
        <item>@string/mobile_accessories</item>

    </string-array>
    <string name="personal_computer">Personal Computer</string>
    <string name="laptops">Laptops</string>
    <string name="computer_accessories">Accessories</string>
    <string-array name="computers">
        <item>@string/personal_computer</item>
        <item>@string/laptops</item>
        <item>@string/computer_accessories</item>

    </string-array>
    <string name="cars">Cars</string>
    <string name="cars_accessories">Cars Accessories</string>
    <string name="vehicel_spare_parts">Spare Parts</string>
    <string name="buses_vans_trucks"><![CDATA[Buses,Vans & Trucks]]></string>
    <string name="rickshaw_chingchi"><![CDATA[Rickshaw & Chingchi]]></string>
    <string name="boats">Boats</string>
    <string name="tractors">Tractors</string>
    <string name="trailers">Trailers</string>
    <string name="other_vehicles">Other Vehicles</string>
    <string-array name="vehicles">
        <item>@string/cars</item>
        <item>@string/cars_accessories</item>
        <item>@string/spare_parts</item>
        <item>@string/buses_vans_trucks</item>
        <item>@string/rickshaw_chingchi</item>
        <item>@string/boats</item>
        <item>@string/tractors</item>
        <item>@string/trailers</item>
        <item>@string/other_vehicles</item>

    </string-array>
    <string name="sofa">Sofa</string>
    <string name="chairs">Chairs</string>
    <string name="beds">Beds</string>
    <string name="tables_dining"><![CDATA[Tables & Dining]]></string>
    <string name="paiting_mirrors"><![CDATA[Painting & Mirrors]]></string>
    <string name="rugs_carpets"><![CDATA[Rugs & Carpets]]></string>
    <string name="office_furniture">Office Furniture</string>
    <string name="curtains_blinds"><![CDATA[Curtains & Blinds]]></string>
    <string name="garden_outdoor"><![CDATA[Garden & Outdoor]]></string>
    <string name="home_decorations">Home Decoration</string>
    <string name="other_household_items">Other Household Items</string>
    <string-array name="furnitures">
        <item>@string/sofa</item>
        <item>@string/chairs</item>
        <item>@string/beds</item>
        <item>@string/tables_dining</item>
        <item>@string/paiting_mirrors</item>
        <item>@string/rugs_carpets</item>
        <item>@string/office_furniture</item>
        <item>@string/curtains_blinds</item>
        <item>@string/garden_outdoor</item>
        <item>@string/home_decorations</item>
        <item>@string/other_household_items</item>


    </string-array>
    <string name="tv"><![CDATA[Television(TV)]]></string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="cameras_accessories"><![CDATA[Cameras & Accessories]]></string>
    <string name="games">Games</string>
    <string name="entertainment">Entertainment</string>
    <string name="generators">Generators</string>
    <string name="ups">UPS</string>
    <string name="ac_coolers"><![CDATA[AC & Coolers]]></string>
    <string name="kitchen_appliances">Kitchen Appliances</string>
    <string name="fridges_freezers"><![CDATA[Fridges & Freezers]]></string>
    <string name="washing_machines_dryers"><![CDATA[Washing Machines & Dryers]]></string>
    <string name="other_home_appliances">Other Home Appliances</string>
    <string name="motorcycles">Motorcycles</string>
    <string name="bicycles">Bicycles</string>
    <string name="scooters">Scooters</string>
    <string name="spare_parts">Spare Parts</string>
    <string-array name="bikes">
        <item>@string/motorcycles</item>
        <item>@string/bicycles</item>
        <item>@string/scooters</item>
        <item>@string/spare_parts</item>
    </string-array>
    <string name="football">Football.</string>
    <string name="cricket">Cricket</string>
    <string name="badminton">Badminton</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="other_sports">Other Sports</string>
    <string name="birds">Birds</string>
    <string name="cats">Cats</string>
    <string name="hens_assel"><![CDATA[Hens & Aseel]]></string>
    <string name="dogs">Dogs</string>
    <string name="horses">Horses</string>
    <string name="livestock">Livestock</string>
    <string name="pet_food_accessories"><![CDATA[Pet Food & Accessories]]></string>
    <string name="other_animals">Other Animals</string>
    <string-array name="animals">
        <item>@string/birds</item>
        <item>@string/cats</item>
        <item>@string/hens_assel</item>
        <item>@string/dogs</item>
        <item>@string/horses</item>
        <item>@string/livestock</item>
        <item>@string/pet_food_accessories</item>
        <item>@string/other_animals</item>
    </string-array>
    <string name="clothes">Clothes</string>
    <string name="jewellery">Jewellery</string>
    <string name="make_up">Make Up</string>
    <string name="hair">Hair</string>
    <string name="watches">Watches</string>
    <string name="wedding">Wedding</string>
    <string name="footwear">Footwear</string>
    <string name="other_fashion">Other Fashion</string>
    <string-array name="fashions">
        <item>@string/clothes</item>
        <item>@string/jewellery</item>
        <item>@string/make_up</item>
        <item>@string/hair</item>
        <item>@string/watches</item>
        <item>@string/wedding</item>
        <item>@string/footwear</item>
        <item>@string/other_fashion</item>

    </string-array>
    <string name="toys">Toys</string>
    <string name="kids_furniture">Kids Furniture</string>
    <string name="prams">Prams</string>
    <string name="walkers">Walkers</string>
    <string name="kids_bikes">Kids Bikes</string>
    <string name="kids_accessories">Kids Accessories</string>
    <string name="books_sub">Books</string>
    <string name="magazines">Magazines</string>
    <string name="gym_fitness"><![CDATA[Gym & Fitness]]></string>
    <string name="other">Other</string>
    <string name="online_remote"><![CDATA[Online / remote]]></string>
    <string name="marketing">Marketing</string>
    <string name="advertisment">Advertisment</string>
    <string name="educationJobType">Education</string>
    <string name="customer_service">Customer Service</string>
    <string name="sales">Sales</string>
    <string name="it_networking"><![CDATA[It & Networking]]></string>
    <string name="hotels">Hotels</string>
    <string name="tourism">Tourism</string>
    <string name="enter_number">enter number</string>
    <string name="log_in">Log in</string>
    <string name="enter_number_to_login">Enter number to Login</string>
    <string name="account_type_jazzcash_mobile_account">Account Type: JazzCash Mobile Account</string>
    <string name="account_title_abdul_waheed">Account Title: Abdul Waheed</string>
    <string name="account_number_92_305_8971088">Account Number # +92 305 8971088</string>
    <string name="step1_upload_screenshot"><b>Step1:</b> Enter transaction TID number.</string>
    <string name="step2_upload_screenshot"><b>Step1:</b> Upload a screenshot of transaction.</string>
    <string name="step3_confirm_your_transaction"><b>Step2:</b> Now press below button to confirm your transaction.</string>
    <string name="website_name">thetaskmet.com</string>
    <string name="no_active_connection">No internet connection found. Please check your network settings</string>
    <string name="network_settings">Network settings</string>
    <string name="enter_tid">Enter transaction TID number</string>
</resources>