<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/signinWithTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/proxima_nova_regular"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnText_Phone"
            android:drawableStart="@drawable/ic_phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingEnd="40dp"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:background="@drawable/btn_sign_in"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>